--- a/shawn_pudjowargono_assignment_01/shawn_pudjowargono_assignment_01.csproj
+++ b/shawn_pudjowargono_assignment_01/shawn_pudjowargono_assignment_01.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Chessboard.cs" />
     <Compile Include="Chessboard_tile.cs" />
+    <Compile Include="Knight.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
