--- a/shawn_pudjowargono_assignment_01/shawn_pudjowargono_assignment_01.csproj
+++ b/shawn_pudjowargono_assignment_01/shawn_pudjowargono_assignment_01.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Chessboard.cs" />
     <Compile Include="Chessboard_tile.cs" />
     <Compile Include="Knight.cs" />
+    <Compile Include="Position.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
