--- a/shawn_pudjowargono_assignment_01/shawn_pudjowargono_assignment_01.csproj
+++ b/shawn_pudjowargono_assignment_01/shawn_pudjowargono_assignment_01.csproj
@@ -35,6 +35,9 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -50,9 +53,44 @@
     <Compile Include="Coordinates.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Results_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Results_Form.Designer.cs">
+      <DependentUpon>Results_Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Windows_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Windows_Form.Designer.cs">
+      <DependentUpon>Windows_Form.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Results_Form.resx">
+      <DependentUpon>Results_Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Windows_Form.resx">
+      <DependentUpon>Windows_Form.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="resources\knight.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="output\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
