Display / Partial Class Update
- Implemented partial class by separating data fields and methods in Chessboard into two class files (Chessboard_A.cs and Chessboard_B.cs)
- Order of knight moves for the final trial now displays in the Windows Form

TODO:
- Explicitly write and use own parent class
- Inherit from the above parent class

--- a/shawn_pudjowargono_assignment_01/shawn_pudjowargono_assignment_01.csproj
+++ b/shawn_pudjowargono_assignment_01/shawn_pudjowargono_assignment_01.csproj
@@ -47,7 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Accessibility.cs" />
-    <Compile Include="Chessboard.cs" />
+    <Compile Include="Chessboard_A.cs" />
+    <Compile Include="Chessboard_B.cs" />
     <Compile Include="Chessboard_tile.cs" />
     <Compile Include="Knight.cs" />
     <Compile Include="Coordinates.cs" />
